<resources>
    <string name="app_name">Alarm Clock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="tick">tick</string>
    <string name="tock">tock</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="yearly">yearly</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="once">Once</string>
    <string name="repeat">Repeat</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="_12_december_2023">12 December.2023</string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="no">no</string>
    <string name="are_you_sure_you_want_to_delete_this_alarm">Are you sure you want to delete this alarm?</string>
    <string name="yes">yes</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_alarms_found">NO Alarms Found</string>

    <array name="tones_array">
        <item>Alarm Tone</item>
        <item>tone1</item>
        <item>tone2</item>
        <item>tone3</item>
    </array>
</resources>